chatbot/deploy/overlays/dev-ollama/openwebui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  labels:
    app: openwebui
spec:
  selector:
    app: openwebui
  ports:
    - name: http
      port: 80
      targetPort: 8080
