chatbot/deploy/overlays/dev-ollama/openwebui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui
spec:
  ingressClassName: public
  rules:
    - host: webui.172.17.93.185.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui
                port:
                  number: 80
